<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/male_radio_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:padding="13dp">

            <ImageView
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_notification_unsel"
                android:visibility="visible" />

            <TextView
                android:id="@+id/view_count_text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/male_lbl"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/filter_edittext_color" />

        <LinearLayout
            android:id="@+id/female_radio_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:padding="13dp">

            <ImageView
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_notification_unsel"
                android:visibility="visible" />

            <TextView
                android:id="@+id/view_count_text02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/female_lbl"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/filter_edittext_color" />
        <LinearLayout
            android:id="@+id/third_radio_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:padding="13dp">

            <ImageView
                android:id="@+id/radio_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_notification_unsel"
                android:visibility="visible" />

            <TextView
                android:id="@+id/view_count_text03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/not_mentioned_lbl"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/filter_edittext_color" />

        <LinearLayout
            android:id="@+id/four_radio_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:padding="13dp">

            <ImageView
                android:id="@+id/radio_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_notification_unsel"
                android:visibility="visible" />

            <TextView
                android:id="@+id/view_count_text04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/all_lbl"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>