<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteColor"
    android:orientation="vertical"
    android:id="@+id/ll_coordinator">

    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_actionbar_height"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:paddingRight="20dp"
        android:background="@color/HeaderColor" >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/arrow_back"
            android:textColor="@color/WhiteColor"
            android:drawablePadding="15dp"
            android:textSize="18sp"
            android:layout_gravity="left"
            />
    </android.support.v7.widget.Toolbar>-->

    <include
        android:id="@+id/toolbar_forgotpassword"
        layout="@layout/new_tool_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
             >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:layout_marginTop="5dp"
                android:text="@string/forgot_pass_screen_message01"
                android:textColor="#212121"
                android:textSize="16sp"
                >
            </TextView>

            <LinearLayout
                android:id="@+id/row01_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:visibility="visible"
                 >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                     >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                       <!-- <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/forgot_pass_email" />-->

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_organization"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_field_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_email_add_lbl"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textSize="14sp"
                            android:textColor="#212121">
                        </EditText>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                   <!-- <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/profile_separator" />-->
                </LinearLayout>
            </LinearLayout>

            <!--<LinearLayout
                android:id="@+id/row04_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"

                >-->

                <Button
                    android:id="@+id/change_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_round_shape"
                    android:gravity="center"
                    android:text="@string/sendlink_lbl"
                    android:textColor="@color/WhiteColor"
                    android:textSize="15sp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp">
                </Button>
            <!--</LinearLayout>-->
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>